--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,14 @@ header {
 
 .nav-logo img {
   display: inline-block;
-  width: 105px;;
+  width: 105px;
+  transition-property: width;
+  transition-duration: .5s;
+  transition-timing-function: ease-out;
+}
+
+.nav-logo img:hover {
+  width: 115px;
 }
 
 .nav {
@@ -62,6 +69,9 @@ header {
   text-decoration: none;
   padding: .5em;
   color: black;
+  transition-property: background;
+  transition-duration: .5s;
+  transition-timing-function: ease-out;
 }
 
 .nav a:hover {
@@ -70,8 +80,38 @@ header {
   border-radius: 1px;
 }
 
+.main {
+  text-align: center;
+}
+
+.vid-section {
+  margin: 1em;
+
+}
+
+.video-player {
+  position: relative;
+  padding-bottom: 51.25%;
+  padding-top: 30px;
+  height: 0;
+  overflow: hidden;
+  margin: 3em auto;
+}
+
+.youtube {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  max-width: 800px;
+  height: 100%;
+  max-height: 450px;
+}
+
+/* **********MUSIC********** */
 .music {
-  margin: 5em 1em;
+  margin: 1em 1em 5em 1em;
 }
 
 .spotify-player {
@@ -98,6 +138,9 @@ header {
   /* background-color: #f2a23c; */
   padding: 1em 2em;
   border-radius: 1px;
+  transition-property: background;
+  transition-duration: .5s;
+  transition-timing-function: ease-out;
 }
 
 .more-streaming:hover {
@@ -113,24 +156,35 @@ footer {
 }
 
 .social-links {
-  display: block;
-  width: 140px;
+  display: inline-block;
+  /* width: 140px; */
   text-decoration: none;
   margin: 0 auto;
-  padding: 1em 1em .5em 1em;
+  padding: 1em 1em .6em;
+  transition-property: background;
+  transition-duration: .5s;
+  transition-timing-function: ease-out;
 }
 
 footer p {
   margin: 1em 0 0;
 }
 .social-links .insta-follow {
-  display: block;
-  width: 100px;
+  display: inline-block;
+  width: 110px;
 }
 
 .social-links:hover {
   background-color: #ffc984;
 }
+
+.main h2 {
+  margin-bottom: 0;
+  text-transform: uppercase;
+
+}
+
+
 
 @media only screen and (min-width: 38em) {
 
@@ -150,13 +204,14 @@ footer p {
   .music {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     align-content: center;
   }
 
   .spotify-player, .apple-player {
     display: inline-block;
     width: 45%;
+    max-width: 420px;
   }
 
   .more {
