update about me page

--- a/css/main.css
+++ b/css/main.css
@@ -125,7 +125,6 @@ header {
 .out-now img{
   width: 50%;
   max-width: 500px;
-  margin-bottom: 3em;
 }
 
 .g-card {
@@ -135,6 +134,16 @@ header {
   transition-property: background, box-shadow;
   transition-duration: .25s;
   transition-timing-function: ease-out;
+}
+
+.about-card {
+  background-color: #f2f2f2;
+  padding: .75em .75em 1em .75em;
+  box-shadow: 0px 2px 8px #cccccc;
+}
+
+.about p {
+  font-family: 'Open Sans', sans-serif;
 }
 
 .graphics-section h3, p {
